# card-server-micro-services-version

./: Cargo.toml
api-gateway/: Cargo.toml  TokenConfig.toml
api-gateway/src/: lib.rs
api-gateway/src/token/: mod.rs
rpc-server/: Cargo.toml
services/user-service/: .env  Cargo.toml  build.rs  diesel.toml  user.proto
services/user-service/migrations/2024-07-30-071359_create_users/: up.sql
services/user-service/migrations/2024-07-30-072130_users_name_email_text_search/: down.sql  up.sql
services/user-service/migrations/2024-07-30-072321_create_friend_requests/: down.sql  up.sql
services/user-service/migrations/2024-09-02-084455_add_user_description_field/: down.sql  up.sql
services/user-service/migrations/2024-09-05-075248_token_records_table_init/: down.sql  up.sql
services/user-service/src/: lib.rs
services/user-service/src/repository/: schema.rs
services/user-service/src/repository/models/: friend_requests.rs  mod.rs  token_records.rs  users.rs
services/user-service/src/service/: mod.rs
src/: api_gateway.rs  rpc_server.rs
