[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-stream = "0.3.5"
chrono = "0.4.38"
diesel = {version = "2.2.2", features = ["postgres", "r2d2", "serde_json", "uuid", "chrono"]}
diesel-async = {version = "0.5.0", features = ["postgres", "bb8"]}
dotenvy = "0.15.7"
futures-util = "0.3.30"
lazy_static = "1.5.0"
pbkdf2 = "0.12.2"
prost = "0.13.1"
prost-types = "0.13.1"
rand = "0.8.5"
rustls = "0.23.12"
rustls-native-certs = "0.7.1"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.11"
tokio-postgres-rustls = "0.12.0"
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
tonic = "0.12.1"
tracing = "0.1"
tracing-subscriber = "0.3.18"
uuid = {version = "1.10.0", features = ["v4", "serde"]}

[build-dependencies]
tonic-build = {version = "0.12.1", features = ["prost"]}

